// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanDb 1`] = `86400000`;

exports[`cleanDb 2`] = `30000`;

exports[`launchEvent  1`] = `
Array [
  Array [
    "npm run tool event=event  gcp&> tool.event.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchEvent  2`] = `
Object {
  "event": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "event",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchEvent azure 1`] = `
Array [
  Array [
    "npm run tool event=event  azure&> tool.event.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchEvent azure 2`] = `Array []`;

exports[`launchEvent azure 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchEvent azure 4`] = `
Object {
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "event",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchEvent azure 5`] = `
Array [
  Array [
    "tool",
    "event",
    Object {
      "azure": true,
      "debug": false,
      "event": "event",
      "forceREST": false,
      "live": true,
    },
  ],
]
`;

exports[`launchEvent with existingInstance, no windows 1`] = `
Array [
  Array [
    "Others",
    [Function],
  ],
]
`;

exports[`launchEvent with existingInstance, no windows 2`] = `
Array [
  Array [
    "tool",
    "Others",
    Object {
      "aws": true,
      "debug": false,
      "event": "Others",
      "forceREST": false,
      "live": true,
      "server": true,
    },
  ],
]
`;

exports[`launchEvent with existingInstance, no windows 3`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "source": "Others",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "event",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource debug not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource debug not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource debug windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource debug windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource fail not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail not windows 3`] = `
Array [
  Array [
    "source",
    [Function],
  ],
]
`;

exports[`launchSource fail windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 dynamo azure >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource fail windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": false,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail windows 3`] = `
Array [
  Array [
    "source",
    [Function],
  ],
]
`;

exports[`launchSource fail windows 4`] = `
Array [
  Array [
    "tool",
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
    Object {
      "azure": true,
      "debug": false,
      "dynamo": true,
      "forceREST": false,
      "live": false,
    },
  ],
]
`;

exports[`launchSource forceREST not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 rest&> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource forceREST not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource forceREST windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 gcp server rest>> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource forceREST windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource live not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource live not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource live windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource live windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource success not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success not windows 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchSource success windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 aws >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource success windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success windows 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchSource success windows 4`] = `
Array [
  Array [
    "source",
    [Function],
  ],
]
`;

exports[`launchSource success windows 5`] = `
Array [
  Array [
    "tool",
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
    Object {
      "aws": true,
      "debug": false,
      "forceREST": false,
      "live": false,
    },
  ],
]
`;

exports[`retry after long enought time 1`] = `
Object {
  "failCount": 1,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "source": "source",
}
`;

exports[`retry after long enought time 2`] = `
Array [
  Array [
    [Function],
    5000,
  ],
]
`;

exports[`retry within short time 1`] = `
Object {
  "failCount": 3,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "source": "source",
}
`;

exports[`startAggregate 1`] = `
Array [
  Array [
    Object {
      "period": Object {
        "N": "10",
      },
    },
  ],
  Array [
    Object {
      "period": Object {
        "N": "10",
      },
    },
  ],
]
`;

exports[`startAggregate 2`] = `
Array [
  Array [
    10,
  ],
  Array [
    10,
  ],
]
`;

exports[`startFetching no source 1`] = `
Array [
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
]
`;

exports[`startFetching source 1`] = `[Error: invalid source]`;

exports[`startFetching source 2`] = `
Array [
  Array [
    Array [
      "quote|base",
    ],
  ],
]
`;

exports[`startFetchingEvent no event 1`] = `
Array [
  Array [
    "tool",
    "event1",
    Object {
      "debug": false,
      "event": "event2",
      "events": Array [
        "event1",
        "event2",
      ],
    },
  ],
  Array [
    "tool",
    "event2",
    Object {
      "debug": false,
      "event": "event2",
      "events": Array [
        "event1",
        "event2",
      ],
    },
  ],
]
`;

exports[`startFetchingEvent no event 2`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "source": "Others",
  },
  "bitstamp": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "source": "bitstamp",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "event",
  },
  "event1": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "source": "event1",
  },
  "event2": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "source": "event2",
  },
  "gdax": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "source": "gdax",
  },
  "gemini": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "source": "gemini",
  },
  "kraken": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "source": "kraken",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`startFetchingEvent with event 1`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "event",
    },
  ],
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "StartReset",
    },
  ],
]
`;
